2010-11-23  Francois Chouinard  <fchouinard@gmail.com>  Adjusted tests to new API

	* src/org/eclipse/linuxtools/lttng/state/experiment/StateExperimentManagerTextTest.java: 
	* src/org/eclipse/linuxtools/lttng/state/resource/LTTngStateResourceTest.java: 
	* src/org/eclipse/linuxtools/lttng/tests/event/LttngEventTest.java: 
	* src/org/eclipse/linuxtools/lttng/tests/event/LttngEventTypeTest.java: 
	* src/org/eclipse/linuxtools/lttng/tests/state/handlers/after/StateAfterUpdateHandlers.java: 
	* src/org/eclipse/linuxtools/lttng/tests/state/handlers/before/StateBeforeUpdateHandlers.java: 

2010-11-10  Francois Chouinard  <fchouinard@gmail.com>

	* src/org/eclipse/linuxxtools/lttng/tests/headless/JniTraceTest.java: New file.
	* src/org/eclipse/linuxxtools/lttng/tests/headless/LttngTraceTest.java: New file.
	* src/org/eclipse/linuxxtools/lttng/tests/headless/TmfTraceTest.java: New file.

2010-11-09  Francois Chouinard  <fchouinard@gmail.com>

    Suppress warning for non-externalized strings
	   * src/org/eclipse/linuxtools/lttng/control/LTTngSyntheticEventProviderTest.java: 
	   * src/org/eclipse/linuxtools/lttng/LttngTestPreparation.java: 
	   * src/org/eclipse/linuxtools/lttng/model/LTTngTreeNodeTest.java: 
	   * src/org/eclipse/linuxtools/lttng/state/experiment/StateExperimentManagerTextTest.java: 
	   * src/org/eclipse/linuxtools/lttng/state/resource/LTTngStateResourceTest.java: 
	   * src/org/eclipse/linuxtools/lttng/tests/event/AllLttngTests.java: 
	   * src/org/eclipse/linuxtools/lttng/tests/event/LttngEventContentTest.java: 
	   * src/org/eclipse/linuxtools/lttng/tests/event/LttngEventFieldTest.java: 
	   * src/org/eclipse/linuxtools/lttng/tests/event/LttngEventReferenceTest.java: 
	   * src/org/eclipse/linuxtools/lttng/tests/event/LttngEventTest.java: 
	   * src/org/eclipse/linuxtools/lttng/tests/event/LttngEventTypeTest.java: 
	   * src/org/eclipse/linuxtools/lttng/tests/event/LttngTimestampTest.java: 